bynkc/tests/fixtures/negative/101_assert_outside_test/src/commerce/payment.bynk
context commerce.payment {
  service authorise {
    on call(opt: Option[Int]) -> Effect[Bool] {
      -- assert as an expression in a match arm — still forbidden outside a test body.
      let _ = match opt {
        Some(_) => assert true
        None => assert false
      }
      Effect.pure(true)
    }
  }
}
